--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h1 class="display-1 display-1--light">Introducción</h1>
-                <h3 class="subhead subhead--dark">Los 7 hábitos de la gente altamente efectiva</h3>
+                <h3 class="subhead subhead--dark">Decálogo de Desarrollo de Mavila</h3>
             </div>
         </div> <!-- end section-header -->
 
@@ -130,37 +130,52 @@
             </div>
         </div> <!-- end about-desc -->
 
-        <div class="row about-stats stats block-1-7 block-m-1-2 block-mob-full" data-aos="fade-up">
+        <div class="row about-stats stats block-1-5 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
                 <div class="stats__count">1</div>
-                <h5>Un Fin <br>en la Mente</h5>
+                <h5>Orden</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">2</div>
-                <h5>Primero <br>lo Primero</h5>
+                <h5>Limpieza</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">3</div>
-                <h5>Ganar - Ganar</h5>
+                <h5>Puntualidad</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">4</div>
-                <h5>Ser Proactivo</h5> 
+                <h5>Responsabilidad</h5> 
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">5</div>
-                <h5>Sinergia</h5> 
+                <h5>Deseo de superación</h5> 
             </div>
+        </div> <!-- end about-stats -->
+
+        <div class="row about-stats stats block-1-5 block-m-1-2 block-mob-full" data-aos="fade-up" style="margin-left: auto; margin-right: auto;">
+                
             <div class="col-block stats__col">
                 <div class="stats__count">6</div>
-                <h5>Entender <br>para ser <br>Comprendido</h5> 
+                <h5>Honradez</h5> 
+            </div>
+            <div class="col-block stats__col ">
+                <div class="stats__count">7</div>
+                <h5>Respeto al derecho<br>de los demás</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">7</div>
-                <h5>Afilar la sierra</h5> 
+                <div class="stats__count">8</div>
+                <h5>Respeto a la ley y<br>a los reglamentos</h5>
             </div>
-
+            <div class="col-block stats__col">
+                <div class="stats__count">9</div>
+                <h5>Amor al trabajo</h5>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">10</div>
+                <h5>Afán por el ahorro<br>y la inversión</h5> 
+            </div>
         </div> <!-- end about-stats -->
 
         <div class="about__line"></div>
