--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
@@ -202,10 +204,10 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-paint-brush"></i>
+                    <i class="fas fa-layer-group"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Ser Proactivo</h3>
+                    <h3 class="h2">Orden</h3>
                     <p>El hábito de la proactividad nos da la libertad para poder escoger nuestra respuesta a los estímulos del medioambiente. Nos faculta para responder de acuerdo con nuestros principios y valores. En esencia, es lo que nos hace humanos y nos permite afirmar que somos los arquitectos de nuestro propio destino.
                     </p>
                 </div>
@@ -216,7 +218,7 @@
                     <i class="icon-group"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Tener un Fin en la Mente</h3>
+                    <h3 class="h2">Limpieza</h3>
                     <p>Comenzar con un fin en mente hace posible que nuestra vida tenga razón de ser, pues la creación de una visión de lo que queremos lograr permite que nuestras acciones estén dirigidas a lo que verdaderamente es significativo en nuestras vidas.
                     </p>
                 </div>
@@ -224,10 +226,11 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-megaphone"></i>
+                    <i class="far fa-clock"></i>
                 </div>
+
                 <div class="service-text">
-                    <h3 class="h2">Primero lo Primero</h3>
+                    <h3 class="h2">Puntualidad</h3>
                     <p>Poner primero lo primero nos permite liberarnos de la tiranía de lo urgente para dedicar tiempo a las actividades que en verdad dan sentido a nuestras vidas. Es la disciplina de llevar a cabo lo importante, lo cual nos permite convertir en realidad la visión que forjamos en el hábito 2.
                     </p>
                 </div>
@@ -235,10 +238,10 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-earth"></i>
+                    <i class="far fa-grin-wink"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Ganar - Ganar</h3>
+                    <h3 class="h2">Responsabilidad</h3>
                     <p>Pensar en Ganar-Ganar nos permite desarrollar una mentalidad de abundancia material y espiritual, pues nos cuestiona la premisa de que la vida es un “juego de suma cero” donde para que yo gane alguien tiene que perder.
                     </p>
                 </div>
@@ -249,7 +252,7 @@
                     <i class="icon-cube"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Entender para ser Comprendido</h3>
+                    <h3 class="h2">Deseo de superación</h3>
                     <p>Buscar entender primero y ser entendido después es la esencia del respeto a los demás. La necesidad que tenemos de ser entendidos es uno de los sentimientos más intensos de todos los seres humanos. Este hábito es la clave de las relaciones humanas efectivas y posibilita llegar a acuerdos de tipo Ganar-Ganar.
                     </p>
                 </div>
@@ -258,7 +261,7 @@
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon"><i class="icon-lego-block"></i></div>
                 <div class="service-text">
-                    <h3 class="h2">Sinergia</h3>
+                    <h3 class="h2">Honradez</h3>
                     <p>Sinergizar es el resultado de cultivar la habilidad y la actitud de valorar la diversidad. La síntesis de ideas divergentes produce ideas mejores y superiores a las ideas individuales. El logro del trabajo en equipo y la innovación son el resultado de este hábito.
                     </p>
                 </div>
@@ -267,7 +270,38 @@
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon"><i class="icon-group"></i></div>
                 <div class="service-text">
-                    <h3 class="h2">Afilar la Sierra</h3>
+                    <h3 class="h2">Respeto al derecho de los demás</h3>
+                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-group"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">Respeto a la ley y a los reglamentos</h3>
+                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon">
+                    <i class="far fa-kiss-wink-heart"></i>
+                </div>
+                <div class="service-text">
+                    <h3 class="h2">Amor al trabajo</h3>
+                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon">
+                    <i class="fas fa-hand-holding-usd"></i>
+                </div>
+                <div class="service-text">
+                    <h3 class="h2">Afán por el ahorro y la inversión</h3>
                     <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
                     </p>
                 </div>
