se agrega contenido de los 10 pasos del decalogo

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h1 class="display-2">Contenido</h1>
-                <h3 class="subhead">Los 7 hábitos de la gente altamente efectiva</h3>
+                <h3 class="subhead">Decálogo de Mavila</h3>
             </div>
         </div> <!-- end section-header -->
 
@@ -208,7 +208,9 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Orden</h3>
-                    <p>El hábito de la proactividad nos da la libertad para poder escoger nuestra respuesta a los estímulos del medioambiente. Nos faculta para responder de acuerdo con nuestros principios y valores. En esencia, es lo que nos hace humanos y nos permite afirmar que somos los arquitectos de nuestro propio destino.
+                    <p>Cada cosa en su lugar espiritual, mental, emocional y físico. <br>
+                      Hay que agendar prioridades no priorizar agendas. <br>
+                      Practicando el orden se hace un hábito.
                     </p>
                 </div>
             </div>
@@ -219,7 +221,10 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Limpieza</h3>
-                    <p>Comenzar con un fin en mente hace posible que nuestra vida tenga razón de ser, pues la creación de una visión de lo que queremos lograr permite que nuestras acciones estén dirigidas a lo que verdaderamente es significativo en nuestras vidas.
+                    <p>Pobre no es, ni nunca debe ser sinónimo de sucio. <br>
+                      La limpieza exterior debe ser un buen reflejo de la limpieza interior. <br>
+                      Limpieza al pensar y actuar.
+
                     </p>
                 </div>
             </div>
@@ -231,7 +236,9 @@
 
                 <div class="service-text">
                     <h3 class="h2">Puntualidad</h3>
-                    <p>Poner primero lo primero nos permite liberarnos de la tiranía de lo urgente para dedicar tiempo a las actividades que en verdad dan sentido a nuestras vidas. Es la disciplina de llevar a cabo lo importante, lo cual nos permite convertir en realidad la visión que forjamos en el hábito 2.
+                    <p>Puntualidad es una cuestión de respeto hacia los demás y uno mismo. <br>
+                      No es asunto de relojes, es asunto de valores. <br>
+                      No es un minuto después, es a la hora exacta.
                     </p>
                 </div>
             </div>
@@ -242,7 +249,8 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Responsabilidad</h3>
-                    <p>Pensar en Ganar-Ganar nos permite desarrollar una mentalidad de abundancia material y espiritual, pues nos cuestiona la premisa de que la vida es un “juego de suma cero” donde para que yo gane alguien tiene que perder.
+                    <p>Es hacer el esfuerzo necesario por cumplir. Hacer la tarea.<br>
+                      Hacer las cosas, porque se deben aunque no me guste hacerlas.
                     </p>
                 </div>
             </div>
@@ -253,7 +261,9 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Deseo de superación</h3>
-                    <p>Buscar entender primero y ser entendido después es la esencia del respeto a los demás. La necesidad que tenemos de ser entendidos es uno de los sentimientos más intensos de todos los seres humanos. Este hábito es la clave de las relaciones humanas efectivas y posibilita llegar a acuerdos de tipo Ganar-Ganar.
+                    <p>
+                      Significa que cada día la persona ó el Potencial Humano debe buscar nuevos patrones de vida, de excelencia, de productividad y de calidad. <br>
+                      La superación se logra con educación y cultura,  practicando la creatividad, y respetando  los valores morales consigo mismo y con los  demás.
                     </p>
                 </div>
             </div>
@@ -262,7 +272,8 @@
                 <div class="service-icon"><i class="icon-lego-block"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Honradez</h3>
-                    <p>Sinergizar es el resultado de cultivar la habilidad y la actitud de valorar la diversidad. La síntesis de ideas divergentes produce ideas mejores y superiores a las ideas individuales. El logro del trabajo en equipo y la innovación son el resultado de este hábito.
+                    <p>La honradez significa calidad de honrado. <br>
+                      Si el Potencial Humano es honrado, su comportamiento se sustenta en la plenitud y en la integridad en sus acciones y con su trabajo.
                     </p>
                 </div>
             </div>
@@ -271,7 +282,8 @@
                 <div class="service-icon"><i class="icon-group"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Respeto al derecho de los demás</h3>
-                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    <p>Como todo ser participe en una sociedad debemos respetar el derecho de uno mismo y el derecho de los demás. <br>
+                      <!-- El derecho de uno, termina con el derecho de las demás personas. -->
                     </p>
                 </div>
             </div>
@@ -280,7 +292,9 @@
                 <div class="service-icon"><i class="icon-group"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Respeto a la ley y a los reglamentos</h3>
-                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    <p>Un alto funcionario de un organismo internacional dijo que “los países desarrollados tienen leyes flexibles de cumplimiento rígido y los países
+                    subdesarrollados tienen leyes rígidas de cumplimiento flexible”.<br>
+                    El ser humano funciona en su mejor expresión mediante respeto a reglas claras y procesos explícitos.
                     </p>
                 </div>
             </div>
@@ -291,7 +305,10 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Amor al trabajo</h3>
-                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    <p>
+                      <!-- El gusto y el significado de la razón de ser del trabajo y el oficio personal constituyen la gran diferencia entre un apersona que enfrenta su trabajo como
+                      una carga continua y otra que lo percibe como un oficio personal, el cual realiza para vivir pero por gusto; por lo mismo, es un poco su propia recompensa.  -->
+                      Mientras mayor aprecio se tenga por la profesión personal, mejor se desempeñará ésta.
                     </p>
                 </div>
             </div>
@@ -302,7 +319,8 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Afán por el ahorro y la inversión</h3>
-                    <p>Afilar la sierra es usar la capacidad que tenemos para renovarnos física, mental y espiritualmente. Es lo que nos permite establecer un equilibrio entre todas las dimensiones de nuestro ser, a fin de ser efectivos en los diferentes papeles (roles) que desempeñamos en nuestras vidas.
+                    <p>Siempre una persona tiene que ser disciplinado con sus ingresos, si es que busca su desarrollo.<br>
+                      <!-- Su ahorro puede determinar su éxito, tratar de invertir en negocios o en acciones que determinen nuevamente otros ingresos. -->
                     </p>
                 </div>
             </div>
