agregue mi perfil

--- a/index.html
+++ b/index.html
@@ -538,6 +538,17 @@
                         </div>
                     </div>
 
+
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/user-04.jpg" alt="Author image" class="testimonials__avatar" style="width: 150px; height: 150px;">
+                        <div class="testimonials__info">
+                            <span class="testimonials__name" style="font-size: 20px">María Stefany Porras Castillo</span>
+                            <span class="testimonials__pos">
+                                <a href="mailto:mars.poc@gmail.com">mars.poc@gmail.com</a>
+                            </span>
+                        </div>
+                    </div>
+
                 </div><!-- end testimonials -->
             </div> <!-- end col-full -->
         </div> <!-- end client-testimonials -->
