cambie mi correo en la pagina

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         <div class="testimonials__info">
                             <span class="testimonials__name" style="font-size: 20px">María Stefany Porras Castillo</span>
                             <span class="testimonials__pos">
-                                <a href="mailto:mars.poc@gmail.com">mars.poc@gmail.com</a>
+                                <a href="mailto:mporras14@alumnos.uaq.mx">mporras14@alumnos.uaq.mx</a>
                             </span>
                         </div>
                     </div>
