--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
 
         <!-- Mapa Conceptual
-        ================================================== -->
+        ================================================== 
         <section id='mapa' class="s-works">
 
             <div class="intro-wrap">
@@ -414,9 +414,9 @@
                         <h1 class="display-2 display-2--light">Mapa Conceptual</h1>
                         <h3 class="subhead">Decálogo de desarrollo de Mavila</h3>
                     </div>
-                </div> <!-- end section-header -->
+                </div> 
 
-            </div> <!-- end intro-wrap -->
+            </div>
 
             <div class="row works-content">
                 <div class="col-full masonry-wrap">
@@ -426,7 +426,7 @@
                         <div class="masonry__brick" data-aos="fade-up">
                             <div class="item-folio">
                                 <div class="item-folio__thumb">
-                                    <a href="images/portfolio/gallery/g-palmeira.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                    <a href="images/portfolio/gallery/g-concept-map.jpeg" class="thumb-link" title="Palmeira" data-size="1050x700">
                                         <img src="images/portfolio/palmeira.jpg"
                                              srcset="images/portfolio/palmeira.jpg 1x, images/portfolio/palmeira@2x.jpg 2x" alt="">
                                     </a>
@@ -446,15 +446,28 @@
                                     <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                                 </div>
                             </div>
-                        </div> <!-- end masonry__brick -->
+                        </div> 
 
-                    </div> <!-- end masonry -->
-                </div> <!-- end col-full -->
-            </div> <!-- end works-content -->
-        </section> <!-- end Mapa Conceptual -->
+                    </div> 
+                </div> 
+            </div> 
+        </section> end Mapa Conceptual -->
 
 
+            <!-- Mapa de sitio
+    ================================================== -->
+    <section id='mapa' class="s-services">
 
+        <div class="row section-header has-bottom-sep" data-aos="fade-up">
+            <div class="col-full">
+                <h1 class="display-2">Mapa conceptual</h1>
+            </div>
+        </div> <!-- end section-header -->
+        <div style="text-align: center;">
+            <img src="images/concept-map.png">
+        </div>
+
+    </section> <!-- end Mapa de sitio -->
 
 
 
