Se agregaron las ventajas y aplicaciones

--- a/index.html
+++ b/index.html
@@ -361,34 +361,11 @@
                                 <tbody style="font-family: sans-serif; font-size: 16px;">
                                 <tr>
                                     <td><p style="text-align: center;">
-                                        Liderazgo
+                                        Las ventajas que en nosotros desarrolla algo como el Decálogo de Mavila, son aspectos de nuestra persona en los que día con día trabajaremos. Estos aspectos son escenciales para tener y expresar una tranquilidad propia, para demostrar a otros el compromiso y la aspiración de superación personal. Pero sobre todo, el amor y la honradez en uno.
                                     </p></td>
                                     <td><p style="text-align: center;">
-                                        Pasar de la dependencia a la interdependencia
-                                    </p></td>
-                                </tr>
-                                <tr>
-                                    <td><p style="text-align: center;">
-                                        Desarrollo Personal / Profesional
-                                    </p></td>
-                                    <td><p style="text-align: center;">
-                                        Fomento del trabajo y colaboración en equipo.
-                                    </p></td>
-                                </tr>
-                                <tr>
-                                    <td><p style="text-align: center;">
-                                        Correcta administración
-                                    </p></td>
-                                    <td><p style="text-align: center;">
-                                        Metas claras
-                                    </p></td>
-                                </tr>
-                                <tr>
-                                    <td><p style="text-align: center;">
-                                        Mejora como persona
-                                    </p></td>
-                                    <td><p style="text-align: center;">
-                                        Comuncación con el entorno
+                                        Las aplicaciones del Decálogo de Mávila creemos que son más directamente a una cuestión personal.
+Podría ser aplicado en organizaciones, grandes empresas o incluso pequeños grupos de trabajo. Pero el verdadero inicio de ello está en nosotros como individuos pertenecientes de dichos grupos.
                                     </p></td>
                                 </tr>
                                 </tbody>
